Update to work with libigl version 1.2.1

--- a/skinning/Makefile.conf
+++ b/skinning/Makefile.conf
@@ -1,8 +1,8 @@
-#CFLAGS=-g -Wall -Wno-reorder -fopenmp -std=c++11
-CFLAGS=-O3 -Wall -Wextra -Wno-reorder -Wno-unknown-pragmas -D_RELEASE -DNDEBUG -fopenmp -std=c++11 -msse4.2 -m64
+#CFLAGS=-g -Wall -Wno-reorder -std=c++11
+CFLAGS=-O3 -Wall -Wextra -Wno-reorder -Wno-unknown-pragmas -D_RELEASE -DNDEBUG -std=c++11 -msse4.2 -m64
 CFLAGS+=$(AFLAGS)
 LIBIGL=/usr/local/igl/libigl/
-LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglsvd3x3
+LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglanttweakbar -liglopengl -liglopengl2
 #IGL_LIB=
 LIBIGL_INC=-I$(LIBIGL)/include -DIGL_STATIC_LIBRARY
 
@@ -28,21 +28,6 @@ else
 	MOSEK_INC=-I$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/h
 	MOSEK_LIB=-L$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/bin -lmosek64 -liglmosek
 	EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
-endif
-
-# No puppet
-NO_PUPPET=defined
-
-ifdef NO_PUPPET
-	PUPPET_INC=-DNO_PUPPET
-else
-	ifeq ($(UNAME), Linux)
-		PUPPET=../../../../the-puppet/
-	else
-		PUPPET=../../../../the-puppet/
-	endif
-	PUPPET_LIB=-L$(PUPPET)/api/generic/lib -lpuppet_api -L$(PUPPET)/api/unix/lib -lpuppet_serial -lboost_thread-mt 
-	PUPPET_INC=-I$(PUPPET)/api/unix/include -I$(PUPPET)/api/generic/include -I$(PUPPET)
 endif
 
 TETGEN=$(LIBIGL)/external/tetgen
@@ -79,9 +64,23 @@ TINYXML2_INC=-I$(TINYXML2)
 # BOOST
 BOOST_INC= -I/opt/local/include
 BOOST_LIB= -L/opt/local/lib -lboost_thread-mt -lboost_system-mt -lboost_program_options-mt
-PUPPET=/Users/ajx/Documents/Puppet/Code/C++/
-PUPPET_API=$(PUPPET)/../../../the-puppet/
-PUPPET_API_LIB=-L$(PUPPET_API)/api/generic/lib -lpuppet_api -L$(PUPPET_API)/api/ftdi/lib -lpuppet_d2xx_serial -framework AppKit -framework IOKit
-PUPPET_API_INC=-I$(PUPPET_API)/api/unix/include -I$(PUPPET_API)/api/generic/include -I$(PUPPET_API) -I$(PUPPET_API)/api/ftdi/include
-PUPPET_INC+=-I${PUPPET} ${PUPPET_API_INC} ${FTDI_INC}
-PUPPET_LIB+=-L${PUPPET}/lib -lpuppet ${PUPPET_API_LIB} ${FTDI_LIB} ${TINYXML2_LIB} ${BOOST_LIB}
+
+# No puppet
+NO_PUPPET=defined
+ifdef NO_PUPPET
+	PUPPET_INC=-DNO_PUPPET
+else
+	ifeq ($(UNAME), Linux)
+		PUPPET=../../../../the-puppet/
+	else
+		PUPPET=../../../../the-puppet/
+	endif
+#PUPPET=/Users/ajx/Documents/Puppet/Code/C++/
+	PUPPET_LIB=-L$(PUPPET)/api/generic/lib -lpuppet_api -L$(PUPPET)/api/unix/lib -lpuppet_serial -lboost_thread-mt 
+	PUPPET_INC=-I$(PUPPET)/api/unix/include -I$(PUPPET)/api/generic/include -I$(PUPPET)
+  PUPPET_API=$(PUPPET)/../../../the-puppet/
+  PUPPET_API_LIB=-L$(PUPPET_API)/api/generic/lib -lpuppet_api -L$(PUPPET_API)/api/ftdi/lib -lpuppet_d2xx_serial -framework AppKit -framework IOKit
+  PUPPET_API_INC=-I$(PUPPET_API)/api/unix/include -I$(PUPPET_API)/api/generic/include -I$(PUPPET_API) -I$(PUPPET_API)/api/ftdi/include
+  PUPPET_INC+=-I${PUPPET} ${PUPPET_API_INC} ${FTDI_INC}
+  PUPPET_LIB+=-L${PUPPET}/lib -lpuppet ${PUPPET_API_LIB} ${FTDI_LIB} ${TINYXML2_LIB} ${BOOST_LIB}
+endif
