--- a/skinning/Makefile.conf
+++ b/skinning/Makefile.conf
@@ -1,5 +1,6 @@
 #CFLAGS=-g -Wall -Wno-reorder -std=c++11
 CFLAGS=-O3 -Wall -Wextra -Wno-reorder -Wno-unknown-pragmas -D_RELEASE -DNDEBUG -std=c++11 -msse4.2 -m64
+CFLAGS+=-DEIGEN_DONT_ALIGN_STATICALLY
 CFLAGS+=$(AFLAGS)
 LIBIGL=/usr/local/igl/libigl/
 LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglanttweakbar -liglopengl -liglopengl2
