--- a/skinning/Makefile.conf
+++ b/skinning/Makefile.conf
@@ -2,10 +2,10 @@
 CFLAGS=-O3 -Wall -Wextra -Wno-reorder -Wno-unknown-pragmas -D_RELEASE -DNDEBUG -std=c++11 -msse4.2 -m64
 CFLAGS+=-DEIGEN_DONT_ALIGN_STATICALLY
 CFLAGS+=$(AFLAGS)
-LIBIGL=/usr/local/igl/libigl/
-LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglanttweakbar -liglopengl -liglopengl2
+LIBIGL=../libigl/
+#LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglanttweakbar -liglopengl -liglopengl2
 #IGL_LIB=
-LIBIGL_INC=-I$(LIBIGL)/include -DIGL_STATIC_LIBRARY
+LIBIGL_INC=-I$(LIBIGL)/include 
 
 UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
@@ -18,7 +18,7 @@ ifeq ($(UNAME), Linux)
 	MOSEK_INC=-I$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/h
 	MOSEK_LIB=-L$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/bin -liglmosek -lmosek64 -liomp5 -lpthread
 	#CFLAGS+=-DIGL_HEADER_ONLY
-	EIGEN3_INC=-I/usr/local/include/eigen3 -I/usr/local/include/eigen3/unsupported
+	EIGEN3_INC=-I$(LIBIGL)/external/nanogui/ext/eigen/-I$(LIBIGL)/external/nanogui/ext/eigen/unsupported
 else
 	ANT_INC=-I$(LIBIGL)/external/AntTweakBar/include
 	ANT_LIB=-L$(LIBIGL)/external/AntTweakBar/lib -lAntTweakBar -framework AppKit
@@ -28,7 +28,7 @@ else
 	MOSEK=/usr/local/mosek
 	MOSEK_INC=-I$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/h
 	MOSEK_LIB=-L$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/bin -lmosek64 -liglmosek
-	EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
+	EIGEN3_INC=-I$(LIBIGL)/external/nanogui/ext/eigen/ -I$(LIBIGL)/external/nanogui/ext/eigen/unsupported
 endif
 
 TETGEN=$(LIBIGL)/external/tetgen
