--- a/skinning/Makefile.conf
+++ b/skinning/Makefile.conf
@@ -6,29 +6,27 @@ LIBIGL=../libigl/
 #LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglanttweakbar -liglopengl -liglopengl2
 #IGL_LIB=
 LIBIGL_INC=-I$(LIBIGL)/include 
+ANT_INC=-I$(LIBIGL)/external/AntTweakBar/include
+ANT_LIB=-L$(LIBIGL)/external/AntTweakBar/lib -lAntTweakBar 
+EIGEN3_INC=-I$(LIBIGL)/external/nanogui/ext/eigen/ -I$(LIBIGL)/external/nanogui/ext/eigen/unsupported
 
 UNAME := $(shell uname)
 ifeq ($(UNAME), Linux)
-	ANT_INC=
-	ANT_LIB=-lAntTweakBar
 	OPENGL_LIB=-lGL -lGLU
 	GLUT_LIB=-lglut
 	MOSEKPLATFORM=linux64x86
 	MOSEK=/usr/local/mosek
 	MOSEK_INC=-I$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/h
 	MOSEK_LIB=-L$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/bin -liglmosek -lmosek64 -liomp5 -lpthread
-	#CFLAGS+=-DIGL_HEADER_ONLY
-	EIGEN3_INC=-I$(LIBIGL)/external/nanogui/ext/eigen/-I$(LIBIGL)/external/nanogui/ext/eigen/unsupported
+	CFLAGS+=-pthread
 else
-	ANT_INC=-I$(LIBIGL)/external/AntTweakBar/include
-	ANT_LIB=-L$(LIBIGL)/external/AntTweakBar/lib -lAntTweakBar -framework AppKit
 	OPENGL_LIB=-framework OpenGL
+	ANT_LIB+=-framework AppKit
 	GLUT_LIB=-framework GLUT
 	MOSEKPLATFORM=osx64x86
 	MOSEK=/usr/local/mosek
 	MOSEK_INC=-I$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/h
 	MOSEK_LIB=-L$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/bin -lmosek64 -liglmosek
-	EIGEN3_INC=-I$(LIBIGL)/external/nanogui/ext/eigen/ -I$(LIBIGL)/external/nanogui/ext/eigen/unsupported
 endif
 
 TETGEN=$(LIBIGL)/external/tetgen
